assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}
/* Header */
#logo {
    float: left;
    font-size: 250%;
    margin-left: 30px;
    font-family: Bungee;
    color: #FBF2C5;
    background: #9B1D42;

}

#menu {
    font-size: 110%;
    letter-spacing: 4px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid #FBF2C5;

}

.active{
    border-bottom: 1px solid #FBF2C5;
}

/* Main body */
body {
    color: #FBF2C5;
    background: #9B1D42;
}

div {
    vertical-align: top;
    display: inline-block;
    width: 30%;
}

p {
    padding: 1%;
}

hr {
    border-top: 1px solid #FBF2C5;
    width: 100%;
    margin: 20px 0;
    clear: both;
} 

h3 {
    font-family: sans-serif;
    color: #FBF2C5;
    background: #9B1D42;
}

/* Home page */
#site-intro {
    padding-left: 30px;
}

#consoles {
    margin-left: 10px;
}

#consoles td {
    height: 150px;
}

.console-image {
    height: inherit;
    width: inherit;
}


/* Game page */

.release-info {
    width: 20%;
}

.release-info > img {
    margin-left: 10px;
    height: 45%;
    width: 45%;
}

.release-info > p {
    margin-top: 0;
}

.release-info > table {
    clear: both;
    margin-left: 10px;
}

table, tr {
    border: 1px solid;
    border-color: inherit;
}

/* footer */
footer {
    height: auto;
    padding: 1%;
}

footer > h4 {
    text-align: center;
}

.external-sites {
    margin-top: 2%;
    text-align: center;
}

.external-sites li {
    display: inline;
    padding: 1%;
    border-style: solid;
    border-color: inherit;
}

.external-sites a {
    font-size: 100%;
    text-decoration: none;
    color: inherit;
}

/* Form */
.form-section {
    clear: left;
    background-size: contain;
    background-repeat: no-repeat; 
    margin-left: 10px;
    height: 440px;
    
}

.contact-form {
    color: #fff;
    background-color: rgba(60, 60, 60, 0.6);
    max-width: 400px;
    position: absolute;
    margin-left: 10px;
    padding: 30px;
}

.text-input {
    background: transparent;
    color: #fafafa;
    width: 100%;
    height: 25px;
    margin: 5px 0 20px;
    border: 1px solid #fafafa;
    border-radius: 2px;
}

.text-input:hover {
    border-color: #30b3f0;
}

.send-button {
    margin-top: 20px;
    border-radius: 2px;
    padding: 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #FBF2C5;
    color: #9B1D42;
    display: block;
}

.send-button:hover {
    background-color: #9B1D42;
    color: #FBF2C5;
}


@media screen and (max-width: 1280px) {
        #menu {
        clear: left;
        float: left;
        margin-left: 30px;
        font-size: 100%;
        line-height: auto;
    }

}


@media screen and (max-width: 1090px) {
    #menu {
        clear: left;
        float: left;
        margin-left: 10px;
        font-size: 100%;
        line-height: 25px;
    }

    #logo {
        margin-left: 10px;
    }

    #site-intro {
        padding-left: 10px;
    }

    #consoles td {
        height: auto;
        width: 260px;
    }

    #consoles {
        margin-left: 10px;
    }

    .release-info > table {
        float: left;
        margin-right: 20px;
        height: auto;
    }

    div {
        display:block;
        width: auto;
        height: auto;
    }

    .release-info {
        display: inline-block;
        width: auto;
        height: auto;
    }

    .release-info img {
        width: 20%;
        height: auto;
    }

    iframe {
        margin-left: 10px;
    }


}

@media screen and (max-width: 800px) {
    #site-intro {
        width: auto;
    }

    #logo {
        margin-left: 5px;
    }

    #menu {
        margin-left: 5px;
        letter-spacing: 1px;
    }

    div {
        display:block;
        width: auto;
    }

    #consoles td {
        height: 100px;
        width: 170px;
        
    }

    p {
        padding: 1%;
    }

    #menu li {
        float: right;
        list-style-type: none;
        
    }

    .external-sites li {
        display: block;
    }

    .release-info {
        display: inline-block;
        width: auto;
    }

    iframe {
        margin-left: 0;
        width: 100%;
    }

}


@media screen and (max-width: 500px) {
    #site-intro {
        width: auto;
    }

    #logo {
        font-size:x-large;
        margin-left: 5px;
    }

    #menu {
        margin-left: 5px;
        letter-spacing: 1px;
    }

    div {
        display:block;
        width: auto;
    }

    #consoles {
        margin-left: 10px;
    }

    #consoles td {
        height: 90px;
        width: 150px;
        
    }

    p {
        padding: 1%;
    }

    #menu li {
        font-size: small;
        float: right;
        list-style-type: none;
        
    }

    .external-sites li {
        display: block;
    }

    .release-info {
        display: inline-block;
        width: auto;
        margin-bottom: 5px;
    }

    iframe {
        width: 100%;
        margin-top: 5px;
        margin-left: 0;
    }

    .form-section {
        margin-left: 0;
    }

    .contact-form {
        margin-left: 0;
    }

}

